--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "cassandra-driver": "^3.3.0",
     "kafka-node": "^2.3.0"
   }
 }
