--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "cassandra-driver": "^3.3.0",
+    "elasticsearch": "^14.0.0",
     "kafka-node": "^2.3.0"
   }
 }
