--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "babel-preset-es2015": "^6.24.1",
     "cassandra-driver": "^3.3.0",
     "elasticsearch": "^14.0.0",
-    "kafka-node": "^2.3.0"
+    "google-protobuf": "^3.5.0",
+    "grpc": "^1.8.0",
+    "kafka-node": "^2.3.0",
+    "uuid": "^3.1.0"
   }
 }
